# ROS2_robot_simulation

./: README.md  package.xml  setup.py
config/: bridge_config.yaml  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml
launch/: navigation_launch.py  robot_sim.launch.py
maps/: my_patrol_map.pgm  my_patrol_map.yaml
rviz/: patrol_robot.rviz
urdf/: patrol_robot.xacro  robot.gv
worlds/: world.xacro  world_processed.sdf
